--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "---\n",
     "## Sources and Links\n",
-    "- Origional Dataset : [Brands and Products Emotions](https://data.world/crowdflower/brands-and-product-emotions)\n",
+    "- Original Dataset : [Brands and Products Emotions](https://data.world/crowdflower/brands-and-product-emotions)\n",
     "- `CHRISP-DM` explination and image : [IBM](https://www.ibm.com/docs/en/spss-modeler/saas?topic=dm-crisp-help-overview)"
    ]
   },
@@ -51,21 +51,36 @@
    "metadata": {},
    "source": [
     "- title\n",
+    "- Sources and Links\n",
     "- overview\n",
     "   - import necessary libraries\n",
     "   - download `nltk wordnet`\n",
     "   - assign data to variable `df`\n",
-    "- business understanding\n",
-    "    - process\n",
-    "    - business objectives\n",
-    "- data understanding\n",
-    "    - data properties\n",
-    "- data preperation\n",
-    "- methodoligy\n",
-    "    - `CHRISP-DM`\n",
+    "- Notebook Summary\n",
+    "    - business understanding - summary\n",
+    "        - process\n",
+    "        - business objectives\n",
+    "    - data understanding - summary\n",
+    "        - data properties\n",
+    "    - data preperation - summary\n",
+    "    - modeling - summary\n",
+    "    - evaluation - summary\n",
+    "    - methodoligy\n",
+    "        - `CHRISP-DM`\n",
     "- exploritory data analysis\n",
     "- model preperation\n",
+    "    - vectorization\n",
+    "        - count vectorizer\n",
+    "        - tfidf vectorizer\n",
+    "    - lemmatization\n",
     "- model building and analysis\n",
+    "    - oversampling\n",
+    "        - smote\n",
+    "    - undersampling\n",
+    "        - random under sampler\n",
+    "    - gridsearchcv\n",
+    "    - pipeline\n",
+    "- The Final Model\n",
     "- conclusion\n",
     "- summary\n",
     "- index\n",
@@ -74,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 1,
    "id": "f4862899-f326-40e4-9058-547609887400",
    "metadata": {},
    "outputs": [],
@@ -128,11 +143,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb9cacad-ac49-44f9-b096-e7c717c1c02f",
+   "id": "dcf6b702-b16d-46b5-9625-28b2e1498a18",
    "metadata": {},
    "source": [
     "---\n",
-    "# Business Undersanding "
+    "# Notebook Summary\n",
+    "\n",
+    "## Business Undersanding-Summary"
    ]
   },
   {
@@ -140,15 +157,7 @@
    "id": "c5b74073-232d-46b4-94fe-5b46885f08ba",
    "metadata": {},
    "source": [
-    "The purpose of the following notebook is so a corporation (Google or Apple in this case) can categorize and evaluate customer sentiment of their products. Using Natural Language Processing (NLP), we can do so through stratigies such as `vectorizing`, `lemmatizing`, and modeling using `MultinomialNB`. The purpose of these strategies will be explained later in the notebook as they show up, but the overal idea using these libraries is to :\n",
-    "\n",
-    "- lemmatize\n",
-    "    - reduce words to their base form.\n",
-    "      - example : faster -> fast\n",
-    "- vectorize\n",
-    "    - turn words into numbers so the model can understand it\n",
-    "- model\n",
-    "    - utilizing `MultinomialNB`, a library that models the given data for us"
+    "The purpose of the following notebook is so a corporation (Google or Apple in this case) can categorize and evaluate customer sentiment of their products. Using Natural Language Processing (NLP), we can do so through stratigies such as `vectorizing`, `lemmatizing`, and modeling using `MultinomialNB`. This will allow the corporations to begin to adjust the products they make to suit their audiance better, or create new and innovative products in the future that will satisfy their customer base."
    ]
   },
   {
@@ -177,7 +186,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Data Understanding "
+    "## Data Understanding-Summary"
    ]
   },
   {
@@ -185,6 +194,10 @@
    "id": "4bbf12a8-d7d2-4ea3-a405-4120cc422402",
    "metadata": {},
    "source": [
+    "The data we have here is a dataset from CrowdFlower via data.world. This data was hand classified by humans to create a dataset designed for NLP. \n",
+    "\n",
+    "the data is as follows:\n",
+    "\n",
     "- Data Properties :\n",
     "    - the original dataset contains 9093 rows, with each row representing a tweet\n",
     "    - the original dataset contains 3 columns, with the columns being :\n",
@@ -192,6 +205,70 @@
     "        - emotion_in_tweet_is_directed_at\n",
     "        - is_there_an_emotion_directed_at_a_brand_or_product\n",
     "            - all 3 of these columns will have their names changed due to how long they are"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22c3c912-1600-4c3b-8e53-dcc5faeee3cb",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Data Preparation-Summary "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc87315c-1e6b-47f3-a3bb-8d06a8629e0d",
+   "metadata": {},
+   "source": [
+    "To begin a Natural Language Processing (NLP) Model, there are several steps required including lemmatization and vectorization. This is done to prepare the data to be able to properly be utilized by the modeling process. Without these steps, the model libraries will most likely return an error, as the model doesnt understand words itself. The purpose of lemmatization is to allow similar words (i.e. ran and run) to count as the same word, as they still mean the same thing in most cases. This is done through finding the root rood for every word, and summing the counts of them all together. \n",
+    "\n",
+    "- lemmatize\n",
+    "    - reduce words to their base form.\n",
+    "      - example : faster -> fast\n",
+    "- vectorize\n",
+    "    - turn words into numbers so the model can understand it"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3739e7e7-c7b0-4408-a168-cd6ad2076a74",
+   "metadata": {},
+   "source": [
+    "For modeling, `MultinomialNB` was chosen, simply do to the fact it works very well for NLP, and its simple to use. To fine tune the model, perameters before the modeling took place were altered, primarily `max_features`. This can drastically change the output of the model as it alters the amount of features the model is allowed to use. Some other perameters that were altered where oversampling and undersampling. This was done through `SMOTE` and `RandomUnderSampler`. These techniques are used due to the fact the original dataset is unbalanced, meaning a specifc feature (example : negative sentiment) has significantly less associated rows than neutral. This can cause issues with the modeling process, causing it to not predict information that well.\n",
+    "\n",
+    "- `SMOTE`\n",
+    "    - creates data where data is laking\n",
+    "- `RandomUnderSampler`\n",
+    "    - reduces data for a feature with more data then the rest\n",
+    "- model\n",
+    "    - utilizing `MultinomialNB`, a library that models the given data for us"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24feac03-6fa7-42ef-b8a8-283bdc9730e9",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Model Evaluation - Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a83fe81-d47b-4178-a2ee-3300107e4976",
+   "metadata": {},
+   "source": [
+    "To evaluate the success of a model, we will be using specific type of metric - _precision_. precision is a metric associated with _false positives_. False positives was chosen to be the metric to evalutate by because of what we want to model to do, that being classify emotion. To understand the logic behind this, lets dive into confusion metricies and evaluation metrics. Confusion metricies output a plot that shows the _true negatives, true positives, false negatives_ and _false positives_ that a given model made. Each of the metrics has a certain impliction. True positives and true negatives are of course what we want the model to have the highest number of predictions in. But no model is perfect. A false negative means the model predicted the feature to be negative, when it was actually positive. In the case of this model, for example, it means it labeled a feature incorectly, a positive emotion text as a negative one. While this isnt optimal, a more important meatric to look at is the opposite, a negative emotion thought to be a positive one. This tweet will most likely never be looked at or analyized becuase we think its good, when we're mostly interested in fixing the negatives at this time. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e047228a-80be-4b54-8f43-ecfcc21ed585",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Data Understanding "
    ]
   },
   {
@@ -713,9 +790,9 @@
     "- `M`ining\n",
     "\n",
     "A good visual for how this works is a model designed by [IBM](https://www.ibm.com/docs/en/spss-modeler/saas?topic=dm-crisp-help-overview)\n",
-    "\n",
-    "![Screenshot 2024-07-29 175829.png](attachment:c1fb4b76-792b-4794-9748-6d4d82e99da4.png)\n",
-    "\n",
+    "<div>\n",
+    "<img src = 'attachment:c1fb4b76-792b-4794-9748-6d4d82e99da4.png' width = '500'/>)\n",
+    "</div>\n",
     "This methodolgy is an overarhcing workflow style, where upon completing a step in the cycle, the next step is started and so on. Where this model really helps though is that its not linear, meaning if needed, returning to a previous step can assist with assuring a thorough and complete modeling process."
    ]
   },
@@ -1281,7 +1358,9 @@
    "cell_type": "code",
    "execution_count": 37,
    "id": "247fc50f-fe07-4fdf-afdf-80ec1e77fa60",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2490,7 +2569,7 @@
    "id": "2e4ee098-34fc-4565-8078-28a6114dd2ab",
    "metadata": {},
    "source": [
-    "## tfidf vectorizer"
+    "## TFIDF Vectorizer"
    ]
   },
   {
@@ -3308,7 +3387,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1ff869b6330>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1f87a6e5220>"
       ]
      },
      "execution_count": 79,
@@ -3376,7 +3455,7 @@
    "id": "35b27414-e550-4992-8afe-10fa629fad55",
    "metadata": {},
    "source": [
-    "## smote\n",
+    "## Smote\n",
     "to solve the no neg on confusion matrix"
    ]
   },
@@ -3931,7 +4010,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1ff88137bc0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1f87973bf80>"
       ]
      },
      "execution_count": 90,
@@ -4534,7 +4613,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1ffb34fea80>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1f8269af8f0>"
       ]
      },
      "execution_count": 100,
@@ -4584,7 +4663,7 @@
    "id": "50dcaf45-bebe-4374-a3c5-6611d5ee0122",
    "metadata": {},
    "source": [
-    "## Downsampling"
+    "## Random Under Sampler"
    ]
   },
   {
@@ -5120,7 +5199,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1ffb34fea80>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1f8269af8f0>"
       ]
      },
      "execution_count": 110,
@@ -5741,7 +5820,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1ffb1f92000>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1f87f1d7650>"
       ]
      },
      "execution_count": 122,
@@ -5793,10 +5872,7 @@
    "id": "2feaa2e7-dec0-4750-9338-2f411e1da10c",
    "metadata": {},
    "source": [
-    "notes :\n",
-    "\n",
-    "grid tfidf vec\n",
-    "grid "
+    "## GridsearchCV and Pipeline"
    ]
   },
   {
@@ -6800,7 +6876,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1ffb47c37d0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1f827b9c0e0>"
       ]
      },
      "execution_count": 135,
@@ -7323,7 +7399,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1ffb473acf0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1f827cfc6b0>"
       ]
      },
      "execution_count": 141,
