--- a/classifying_tweets.ipynb
+++ b/classifying_tweets.ipynb
@@ -33,7 +33,8 @@
     "---\n",
     "## Sources and Links\n",
     "- Original Dataset : [Brands and Products Emotions](https://data.world/crowdflower/brands-and-product-emotions)\n",
-    "- `CHRISP-DM` explination and image : [IBM](https://www.ibm.com/docs/en/spss-modeler/saas?topic=dm-crisp-help-overview)"
+    "- `CHRISP-DM` explination and image : [IBM](https://www.ibm.com/docs/en/spss-modeler/saas?topic=dm-crisp-help-overview)\n",
+    "- Link to repository : [classifying_tweets](https://github.com/Djohnson1313/classifying_tweets)"
    ]
   },
   {
@@ -3584,7 +3585,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1fa3223de50>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1b2c2cd6e70>"
       ]
      },
      "execution_count": 80,
@@ -4206,7 +4207,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1fa37538f20>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1b2ea117920>"
       ]
      },
      "execution_count": 90,
@@ -4812,7 +4813,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1fa3371a150>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1b2ea181a90>"
       ]
      },
      "execution_count": 100,
@@ -5399,7 +5400,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1fa3371a150>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1b2ea181a90>"
       ]
      },
      "execution_count": 110,
@@ -6021,7 +6022,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1fa2fe88e60>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1b2ea16e390>"
       ]
      },
      "execution_count": 122,
@@ -7056,7 +7057,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1fa373c58b0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1b2eb4abe00>"
       ]
      },
      "execution_count": 134,
@@ -7570,7 +7571,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1fa5eb5afc0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1b2ea117770>"
       ]
      },
      "execution_count": 139,
