--- a/classifying_tweets.ipynb
+++ b/classifying_tweets.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "Instructor : Mark Barbour \n",
     "\n",
-    "Blog : \n",
+    "Blog : [Function over.... Pipeline?](https://datascienceandyou.blogspot.com/2024/10/function-over-pipeline.html)\n",
     "\n",
     "Studen Pace : FLEX"
    ]
