--- a/classifying_tweets.ipynb
+++ b/classifying_tweets.ipynb
@@ -34,7 +34,8 @@
     "## Sources and Links\n",
     "- Original Dataset : [Brands and Products Emotions](https://data.world/crowdflower/brands-and-product-emotions)\n",
     "- `CHRISP-DM` explination and image : [IBM](https://www.ibm.com/docs/en/spss-modeler/saas?topic=dm-crisp-help-overview)\n",
-    "- Link to repository : [classifying_tweets](https://github.com/Djohnson1313/classifying_tweets)"
+    "- Link to repository : [classifying_tweets](https://github.com/Djohnson1313/classifying_tweets)\n",
+    "- Link to presentation : [nlp_presentation](https://github.com/Djohnson1313/classifying_tweets/blob/main/nlp_presentation.pdf)"
    ]
   },
   {
@@ -58,18 +59,14 @@
     "   - import necessary libraries\n",
     "   - download `nltk wordnet`\n",
     "   - assign data to variable `df`\n",
-    "- Notebook Summary\n",
-    "    - business understanding - summary\n",
-    "        - process\n",
-    "        - business objectives\n",
-    "    - data understanding - summary\n",
-    "        - data properties\n",
-    "        - data distribution\n",
-    "    - data preperation - summary\n",
-    "    - modeling - summary\n",
-    "    - evaluation - summary\n",
-    "    - methodoligy\n",
-    "        - `CHRISP-DM`\n",
+    "- business understanding\n",
+    "  - process\n",
+    "    - business objectives\n",
+    "- data understanding\n",
+    "  - data properties\n",
+    "  - data distribution\n",
+    "- methodoligy\n",
+    "  - `CHRISP-DM`\n",
     "- Functions\n",
     "    - customized functions used throught the notebook\n",
     "- exploritory data analysis\n",
@@ -162,9 +159,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# Notebook Summary\n",
-    "\n",
-    "## Business Undersanding-Summary"
+    "# Business Undersanding"
    ]
   },
   {
@@ -192,42 +187,6 @@
     "    - asses and unserstand the data provided\n",
     "- project plan\n",
     "    - produce a usable and reliable classification model given the accessable informationble informationble informationble information"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "99d32545-8364-4808-ad90-ed9d165ab895",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## Data Understanding-Summary"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4bbf12a8-d7d2-4ea3-a405-4120cc422402",
-   "metadata": {},
-   "source": [
-    "The data we have here is a dataset from CrowdFlower via data.world. This data was hand classified by humans to create a dataset designed for NLP. \n",
-    "\n",
-    "the data is as follows:\n",
-    "\n",
-    "- Data Properties :\n",
-    "    - the original dataset contains 9093 rows, with each row representing a tweet\n",
-    "    - the original dataset contains 3 columns, with the columns being :\n",
-    "        - tweet_text\n",
-    "        - emotion_in_tweet_is_directed_at\n",
-    "        - is_there_an_emotion_directed_at_a_brand_or_product\n",
-    "            - all 3 of these columns will have their names changed due to how long they are"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "22c3c912-1600-4c3b-8e53-dcc5faeee3cb",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## Data Preparation-Summary "
    ]
   },
   {
@@ -261,29 +220,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24feac03-6fa7-42ef-b8a8-283bdc9730e9",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## Model Evaluation - Summary"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6a83fe81-d47b-4178-a2ee-3300107e4976",
-   "metadata": {},
-   "source": [
-    "To evaluate the success of a model, we will be using specific type of metric - _precision_. Precision is a metric associated with _false positives_. False positives was chosen to be the metric to evaluate by because of what we want to model to do, that being classify emotion. To understand the logic behind this, lets dive into confusion metrices and evaluation metrics. Confusion metrices output a plot that shows the _true negatives, true positives, false negatives_ and _false positives_ that a given model made. Each of the metrics has a certain implication. True positives and true negatives are of course what we want the model to have the highest number of predictions in. But no model is perfect. A false negative means the model predicted the feature to be negative, when it was actually positive. In the case of this model, for example, it means it labeled a feature incorrectly, a positive emotion text as a negative one. While this isn't optimal, a more important metric to look at is the opposite, a negative emotion thought to be a positive one. This tweet will most likely never be looked at or analyzed because we think its good, when we're mostly interested in fixing the negatives at this time. To finally test the model, we used `train_test_split` as our validation approach. This splits the data in a way that allows a model to be built on a subset of the data, and tested on another subset of data that has never been seen by the model."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e047228a-80be-4b54-8f43-ecfcc21ed585",
    "metadata": {},
    "source": [
     "---\n",
     "# Data Understanding \n",
-    "Here we will take a quick look into the data we have access to, and do some small changes to make it easier to read."
+    "The data we have here is a dataset from CrowdFlower via data.world. This data was hand classified by humans to create a dataset designed for NLP. \n",
+    "\n",
+    "the data is as follows:\n",
+    "\n",
+    "- Data Properties :\n",
+    "    - the original dataset contains 9093 rows, with each row representing a tweet\n",
+    "    - the original dataset contains 3 columns, with the columns being :\n",
+    "        - tweet_text\n",
+    "        - emotion_in_tweet_is_directed_at\n",
+    "        - is_there_an_emotion_directed_at_a_brand_or_product\n",
+    "            - all 3 of these columns will have their names changed due to how long they are\n",
+    "         \n",
+    "Let's take a quick look into the data we have access to, and do some small changes to make it easier to read."
    ]
   },
   {
@@ -598,7 +552,13 @@
    "metadata": {},
    "source": [
     "# Data Preparation\n",
-    "Here we change a few more things about the data to ensure a smooth experiance later on."
+    "To begin a Natural Language Processing (NLP) Model, there are several steps required including lemmatization and vectorization. This is done to prepare the data to be able to properly be utilized by the modeling process. Without these steps, the model libraries will most likely return an error, as the model doesnt understand words itself. The purpose of lemmatization is to allow similar words (i.e. ran and run) to count as the same word, as they still mean the same thing in most cases. This is done through finding the root rood for every word, and summing the counts of them all together. \n",
+    "\n",
+    "- lemmatize\n",
+    "    - reduce words to their base form.\n",
+    "      - example : faster -> fast\n",
+    "- vectorize\n",
+    "    - turn words into numbers so the model can understand it\n"
    ]
   },
   {
@@ -869,6 +829,8 @@
     "    '''\n",
     "    splits words individualy and counts the total amount of words in a given row.\n",
     "    if used with .apply(word_count) can be used on an entire dataframe.\n",
+    "\n",
+    "    requirements : the row(s) the function is acting upon needs to be dtype(object)\n",
     "    '''\n",
     "    \n",
     "    return len(str(row).split())"
@@ -885,6 +847,8 @@
     "    '''\n",
     "    counts the total amout of words in a specified emotion field, \n",
     "    as well as returns the average per tweet for the specified emotion field.\n",
+    "\n",
+    "    requirements : the row(s) the function is acting upon needs to be dtype(object)\n",
     "    '''\n",
     "    \n",
     "    em = emotion\n",
@@ -907,6 +871,8 @@
     "    uses list comprehension to remove stopwords from a given list.\n",
     "    requires stopwords_list to be created before hand.\n",
     "    if used with .apply(remove_stopwords) can be used on en entire dataframe.\n",
+    "    \n",
+    "    requirement : the row(s) the function is acting upon needs to be dtype(object)\n",
     "    '''\n",
     "    \n",
     "    stopwords_removed = [w for w in token_list if w not in stopwords_list]\n",
@@ -924,6 +890,8 @@
     "    '''\n",
     "    uses list comprehension to lemmatize a given column.\n",
     "    if used with .apply(lem_col) can be used on enitre dataframe.\n",
+    "    \n",
+    "    requirement : the columns(s) the function is acting upon needs to be dtype(object)\n",
     "    '''\n",
     "    \n",
     "    return [lem.lemmatize(w) for w in col]"
@@ -939,6 +907,8 @@
     "def get_metrics(y_train, pred):\n",
     "    '''\n",
     "    bundles together accuracy, precision, recall and f1 score into one function.\n",
+    "    \n",
+    "    requirements : this function requires 2 inputs, the y_values as dtype(object) and pred as dtype(numpy.ndarry)\n",
     "    '''   \n",
     "    \n",
     "    acc = accuracy_score(y_train, pred)\n",
@@ -1465,7 +1435,16 @@
    "source": [
     "# Model Preperation\n",
     "\n",
-    "Lets move on to data preperation. Here we will show the the process and effects of what needs to be done for the modeling process to function properly. Later we will use a pipeline and gridsearch which conceals this process, so its good to get a basic understanding of whats happening now."
+    "Lets move on to data preperation. Here we will show the the process and effects of what needs to be done for the modeling process to function properly. Later we will use a pipeline and gridsearch which conceals this process, so its good to get a basic understanding of whats happening now.\n",
+    "\n",
+    "For modeling, `MultinomialNB` was chosen, simply do to the fact it works very well for NLP, and its simple to use. To fine tune the model, perameters before the modeling took place were altered, primarily `max_features`. This can drastically change the output of the model as it alters the amount of features the model is allowed to use. Some other perameters that were altered where oversampling and undersampling. This was done through `SMOTE` and `RandomUnderSampler`. These techniques are used due to the fact the original dataset is unbalanced, meaning a specifc feature (example : negative sentiment) has significantly less associated rows than neutral. This can cause issues with the modeling process, causing it to not predict information that well.\n",
+    "\n",
+    "- `SMOTE`\n",
+    "    - creates data where data is laking\n",
+    "- `RandomUnderSampler`\n",
+    "    - reduces data for a feature with more data then the rest\n",
+    "- model\n",
+    "    - utilizing `MultinomialNB`, a library that models the given data for usor us"
    ]
   },
   {
@@ -3585,7 +3564,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1b2c2cd6e70>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x2a5b62a6090>"
       ]
      },
      "execution_count": 80,
@@ -4207,7 +4186,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1b2ea117920>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x2a5dd88d0d0>"
       ]
      },
      "execution_count": 90,
@@ -4813,7 +4792,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1b2ea181a90>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x2a5dd9866f0>"
       ]
      },
      "execution_count": 100,
@@ -5400,7 +5379,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1b2ea181a90>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x2a5dd9866f0>"
       ]
      },
      "execution_count": 110,
@@ -6022,7 +6001,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1b2ea16e390>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x2a5dd88f4d0>"
       ]
      },
      "execution_count": 122,
@@ -7057,7 +7036,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1b2eb4abe00>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x2a5deb6e960>"
       ]
      },
      "execution_count": 134,
@@ -7571,7 +7550,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1b2ea117770>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x2a5dec10980>"
       ]
      },
      "execution_count": 139,
@@ -7645,7 +7624,9 @@
    "id": "a26625b8-bbba-46a5-9d4a-f47d93414fe8",
    "metadata": {},
    "source": [
-    "Our final model has a precision score of 86.21, which isnt bad. The model required us to undersample the majority classes to get the model to be able to actually see the minority class. We also used a `max_feature` of 3000, as thats what the gridsearch found to be optimal."
+    "To evaluate the success of a model, we will be using specific type of metric - _precision_. Precision is a metric associated with _false positives_. False positives was chosen to be the metric to evaluate by because of what we want to model to do, that being classify emotion. To understand the logic behind this, lets dive into confusion metrices and evaluation metrics. Confusion metrices output a plot that shows the _true negatives, true positives, false negatives_ and _false positives_ that a given model made. Each of the metrics has a certain implication. True positives and true negatives are of course what we want the model to have the highest number of predictions in. But no model is perfect. A false negative means the model predicted the feature to be negative, when it was actually positive. In the case of this model, for example, it means it labeled a feature incorrectly, a positive emotion text as a negative one. While this isn't optimal, a more important metric to look at is the opposite, a negative emotion thought to be a positive one. This tweet will most likely never be looked at or analyzed because we think its good, when we're mostly interested in fixing the negatives at this time. To finally test the model, we used `train_test_split` as our validation approach. This splits the data in a way that allows a model to be built on a subset of the data, and tested on another subset of data that has never been seen by the model.\n",
+    "\n",
+    "This specific model resulted in an 86.2% precision score. This score represents how often the _false positive_ mistake is made by the model. In this case, it means 86% of the time, the model correctly labeled the positive text as positive text."
    ]
   },
   {
