--- a/classifying_tweets.ipynb
+++ b/classifying_tweets.ipynb
@@ -191,35 +191,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc87315c-1e6b-47f3-a3bb-8d06a8629e0d",
-   "metadata": {},
-   "source": [
-    "To begin a Natural Language Processing (NLP) Model, there are several steps required including lemmatization and vectorization. This is done to prepare the data to be able to properly be utilized by the modeling process. Without these steps, the model libraries will most likely return an error, as the model doesnt understand words itself. The purpose of lemmatization is to allow similar words (i.e. ran and run) to count as the same word, as they still mean the same thing in most cases. This is done through finding the root rood for every word, and summing the counts of them all together. \n",
-    "\n",
-    "- lemmatize\n",
-    "    - reduce words to their base form.\n",
-    "      - example : faster -> fast\n",
-    "- vectorize\n",
-    "    - turn words into numbers so the model can understand it"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3739e7e7-c7b0-4408-a168-cd6ad2076a74",
-   "metadata": {},
-   "source": [
-    "For modeling, `MultinomialNB` was chosen, simply do to the fact it works very well for NLP, and its simple to use. To fine tune the model, perameters before the modeling took place were altered, primarily `max_features`. This can drastically change the output of the model as it alters the amount of features the model is allowed to use. Some other perameters that were altered where oversampling and undersampling. This was done through `SMOTE` and `RandomUnderSampler`. These techniques are used due to the fact the original dataset is unbalanced, meaning a specifc feature (example : negative sentiment) has significantly less associated rows than neutral. This can cause issues with the modeling process, causing it to not predict information that well.\n",
-    "\n",
-    "- `SMOTE`\n",
-    "    - creates data where data is laking\n",
-    "- `RandomUnderSampler`\n",
-    "    - reduces data for a feature with more data then the rest\n",
-    "- model\n",
-    "    - utilizing `MultinomialNB`, a library that models the given data for us"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e047228a-80be-4b54-8f43-ecfcc21ed585",
    "metadata": {},
    "source": [
@@ -2218,8 +2189,13 @@
    "id": "cc2bf6bf-f3ce-42b3-9dde-84c22cc47dc4",
    "metadata": {},
    "source": [
-    "# Vectorization & Lemmatization\n",
-    "Here we vectorize and lemmatize our data. Lemmatizing is just reducing words to their base form, an example would be feet -> foot. This is done becasue most words mean the same thing in different contexts, so ensuring they can be counted as the same word is important. Vectorizing simply counts the amout of times a word shows up. This is necessary for the modeling process."
+    "To begin a Natural Language Processing (NLP) Model, there are several steps required including lemmatization and vectorization. This is done to prepare the data to be able to properly be utilized by the modeling process. Without these steps, the model libraries will most likely return an error, as the model doesnt understand words itself. The purpose of lemmatization is to allow similar words (i.e. ran and run) to count as the same word, as they still mean the same thing in most cases. This is done through finding the root rood for every word, and summing the counts of them all together. \n",
+    "\n",
+    "- lemmatize\n",
+    "    - reduce words to their base form.\n",
+    "      - example : faster -> fast\n",
+    "- vectorize\n",
+    "    - turn words into numbers so the model can understand it"
    ]
   },
   {
@@ -3564,7 +3540,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x2a5b62a6090>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x164af9b3c80>"
       ]
      },
      "execution_count": 80,
@@ -4186,7 +4162,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x2a5dd88d0d0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x164b6ab4c50>"
       ]
      },
      "execution_count": 90,
@@ -4792,7 +4768,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x2a5dd9866f0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x164de0237d0>"
       ]
      },
      "execution_count": 100,
@@ -5379,7 +5355,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x2a5dd9866f0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x164de0237d0>"
       ]
      },
      "execution_count": 110,
@@ -6001,7 +5977,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x2a5dd88f4d0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x164ddfed640>"
       ]
      },
      "execution_count": 122,
@@ -7036,7 +7012,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x2a5deb6e960>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x164de012600>"
       ]
      },
      "execution_count": 134,
@@ -7550,7 +7526,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x2a5dec10980>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x164df1225a0>"
       ]
      },
      "execution_count": 139,
