--- a/classifying_tweets.ipynb
+++ b/classifying_tweets.ipynb
@@ -159,7 +159,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# Business Undersanding"
+    "# Business Understanding"
    ]
   },
   {
@@ -1404,7 +1404,7 @@
    "id": "731efc3d-39ae-40ab-a717-ce11f1402c22",
    "metadata": {},
    "source": [
-    "# Model Preperation\n",
+    "# Model Preparation\n",
     "\n",
     "Lets move on to data preperation. Here we will show the the process and effects of what needs to be done for the modeling process to function properly. Later we will use a pipeline and gridsearch which conceals this process, so its good to get a basic understanding of whats happening now.\n",
     "\n",
