--- a/classifying_tweets.ipynb
+++ b/classifying_tweets.ipynb
@@ -14,15 +14,11 @@
    "metadata": {},
    "source": [
     "---\n",
-    "Name : Darryn Johnson \n",
+    "Creator : DJohnson1313\n",
     "\n",
     "Date : 10/15/2024\n",
     "\n",
-    "Instructor : Mark Barbour \n",
-    "\n",
-    "Blog : [Function over.... Pipeline?](https://datascienceandyou.blogspot.com/2024/10/function-over-pipeline.html)\n",
-    "\n",
-    "Studen Pace : FLEX"
+    "Pace : FLEX"
    ]
   },
   {
@@ -7654,7 +7650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
